; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_araw.c_DAT12Decode.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_araw.c_DAT12Decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32)* @DAT12Decode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DAT12Decode(i8* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** %7, align 8
  br label %10

10:                                               ; preds = %13, %3
  %11 = load i32, i32* %6, align 4
  %12 = icmp uge i32 %11, 2
  br i1 %12, label %13, label %33

13:                                               ; preds = %10
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @U16_AT(i32* %14)
  %16 = ashr i32 %15, 4
  %17 = call i8* @dat12tos16(i32 %16)
  %18 = ptrtoint i8* %17 to i32
  %19 = load i32*, i32** %7, align 8
  %20 = getelementptr inbounds i32, i32* %19, i32 1
  store i32* %20, i32** %7, align 8
  store i32 %18, i32* %19, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 1
  %23 = call i32 @U16_AT(i32* %22)
  %24 = and i32 %23, -61441
  %25 = call i8* @dat12tos16(i32 %24)
  %26 = ptrtoint i8* %25 to i32
  %27 = load i32*, i32** %7, align 8
  %28 = getelementptr inbounds i32, i32* %27, i32 1
  store i32* %28, i32** %7, align 8
  store i32 %26, i32* %27, align 4
  %29 = load i32*, i32** %5, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 3
  store i32* %30, i32** %5, align 8
  %31 = load i32, i32* %6, align 4
  %32 = sub i32 %31, 2
  store i32 %32, i32* %6, align 4
  br label %10

33:                                               ; preds = %10
  %34 = load i32, i32* %6, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %44

36:                                               ; preds = %33
  %37 = load i32*, i32** %5, align 8
  %38 = call i32 @U16_AT(i32* %37)
  %39 = ashr i32 %38, 4
  %40 = call i8* @dat12tos16(i32 %39)
  %41 = ptrtoint i8* %40 to i32
  %42 = load i32*, i32** %7, align 8
  %43 = getelementptr inbounds i32, i32* %42, i32 1
  store i32* %43, i32** %7, align 8
  store i32 %41, i32* %42, align 4
  br label %44

44:                                               ; preds = %36, %33
  ret void
}

declare dso_local i8* @dat12tos16(i32) #1

declare dso_local i32 @U16_AT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
